<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_cyberbullying"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.bsindala.moralapp.CyberbullyingActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:id="@+id/quote1"
        android:fontFamily="helvetica"
        android:textSize="20sp"
        android:text="@string/quote1"
        android:textColor="@android:color/holo_blue_dark" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/quote2"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp"
        android:id="@+id/quote3"
        android:textSize="20sp"
        android:textColor="@android:color/holo_red_dark"
        android:text="@string/quote3" />

    <TextView
        android:text="@string/quote2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:id="@+id/quote2"
        android:textSize="20sp"
        android:layout_below="@+id/quote1"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/holo_green_dark" />
</RelativeLayout>
