<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout
    android:id="@+id/activity_bullying"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/choose_one"
    tools:context="com.example.bsindala.moralapp.BullyingActivity">

    <TextView
        android:text="@string/bully1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="63dp"
        android:id="@+id/bully1"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:fontFamily="helvetica"
        android:textSize="20sp"
        android:textAlignment="center"
        android:background="@color/colorAccent"
        android:textColor="#191970"
        android:textStyle="normal|bold" />

    <TextView
        android:text="@string/bully2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bully1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:id="@+id/bully2"
        android:fontFamily="helvetica"
        android:textSize="20sp"
        android:textColor="#191970"
        android:textAlignment="center"
        android:background="@color/colorAccent"
        android:textStyle="normal|bold" />

    <TextView
        android:text="@string/bully3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bully2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="74dp"
        android:id="@+id/bully3"
        android:fontFamily="helvetica"
        android:textSize="20sp"
        android:textColor="#191970"
        android:textAlignment="center"
        android:background="@color/colorAccent"
        android:textStyle="normal|bold" />
</RelativeLayout>
</ScrollView>